# 7daysofcode-java-but-in-haskell

./: 7daysofcode-java-but-in-haskell.cabal  CHANGELOG.md  README.rst  shell.nix
app/: Config.hs  JSONParser.hs  Main.hs
