cabal-version:      2.4
name:               7daysofcode-java-but-in-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable 7daysofcode-java-but-in-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: JSONParser
                 , Config

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , wreq
                    , lens
                    , bytestring
                    , http-client
                    , http-client-tls
                    , text
                    , aeson
                    , lens-aeson
                    , containers
                    , yaml
                    , vector
                    , parsec
    hs-source-dirs:   app
    default-language: Haskell2010
